# homeautomation

./: .clang  .clang-format  CMakeLists.txt  conanfile.txt  extra_script.py  main.cpp  platformio.ini  tasks.py  user.cpp
arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt  Wire.cpp  Wire.h
build-scripts/: invocation.sh
build-scripts/cmake/toolchain/: toolchain.linux-arm11.cmake
hardware/: Arduino.cpp  Arduino.h  CMakeLists.txt  Wire.cpp
io/: PCF8574.cpp  PCF8574.h  bithelpers.h
lib/bithelpers/src/: CMakeLists.txt  bithelpers.h
lib/io/src/: CMakeLists.txt  PCF8574.cpp  PCF8574.h  bithelpers.h
lib/plc/src/: CMakeLists.txt  PLC.cpp  PLC.h
plc/: PLC.cpp  PLC.h
src/: CMakeLists.txt
src/cellar/: CMakeLists.txt  user.cpp
src/groundfloor/: user.cpp
test/: CMakeLists.txt  test_bithelpers.cpp  test_plc.cpp
test/lib/: CMakeLists.txt
test/lib/Arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt
user/: CMakeLists.txt  cellar.cpp
user/cellar/: user.cpp
user/groundfloor/: CMakeLists.txt
